dnl
dnl
dnl written by Y.H.R -- 2005/12/03
dnl
dnl
dnl


AC_INIT(MakeVars.in)
dnl AC_CONFIG_HEADER(scagent_config.h)
dnl AC_PREFIX_DEFAULT(/usr/local/scagent)


AC_MSG_CHECKING( system type )

SYS=`uname -s`
VER=`uname -v`
REL=`uname -r`

case $SYS in
	Linux*)
		REL=`uname -r | sed 's;\.;;g'`
		SYSTEM_TYPE="Linux"
		AC_MSG_RESULT( LINUX )
		LIBS="-lpthread -lsccommon -lsccore -lscmisc -ltinyxml -lsccore"
		;;
	SunOS*)
		REL=`uname -r | sed 's;\.;;g'`
		SYSTEM_TYPE="SunOS"
		AC_MSG_RESULT( SunOS )
		LIBS=" -lsocket -lnsl -lpthread -lsccommon -lsccore -lscmisc -ltinyxml -lsccore -lkstat -lrt"
		;;
	AIX*)
		VER=`uname -v`
		REL=`uname -r`
		SYSTEM_TYPE="AIX"
		LIBS=" /usr/lib/libpthread.a -lperfstat -lsccommon -lsccore -lscmisc -ltinyxml -lsccore -lpthread"
		AC_MSG_RESULT( AIX )
		;;
	HP-UX*)
		REL=`uname -r | sed 's;\.;;g'`
		SYSTEM_TYPE="HPUX"
		LIBS=" -lnm -lpthread -lsccommon -lsccore -lscmisc -ltinyxml "
		AC_MSG_RESULT( HP-UX )
		;;
esac

AC_SUBST(SYSTEM_TYPE)
AC_SUBST(DIST_HOME)

TOP_DIR=`pwd`
INC_DIR='-I$(TOP_DIR)/include -I$(TOP_DIR)/include/common -I$(TOP_DIR)/lib/src/core -I$(TOP_DIR)/lib/src/common -I$(TOP_DIR)/lib/src/xml -I$(TOP_DIR)/lib/src/OpenThreads/include -I./ -I$(TOP_DIR)/lib/include'
LIB_DIR='-L$(TOP_DIR)/lib -L$(TOP_DIR)/lib/lib '
AR=`which ar`
CP=`which cp`

AC_SUBST(TOP_DIR)
AC_SUBST(INC_DIR)
AC_SUBST(LIB_DIR)
AC_SUBST(AR)
AC_SUBST(CP)


dnl ################################################
dnl ## Checks for system type
dnl ################################################

dnl AC_CONFIG_AUX_DIR(/usr/local/bin/automake)
dnl AC_CANONICAL_HOST

AC_SUBST(LIBS)
dnl AC_PROG_CC

AC_MSG_CHECKING( for C compiler )
CC=`which gcc`
CPP=`which g++`
case $CC in
	*gcc*)
		AC_MSG_RESULT(using gcc)
		CODE='$(ORA_ENABLE)'
		;;
		*)
			echo $COMPILER
			echo "gcc not installed!!"
			echo "check gcc!!"
			exit 1
		;;
esac

CFLAGS=$CODE
CPPFLAGS=$CODE

AC_SUBST(CC)
AC_SUBST(CPP)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)

AC_ARG_ENABLE(debug, [  --enable-debug            enable compilter debugging option],
	[debug_ok=$enableval])

if test "$debug_ok" = "yes"; then
	DEBUG_FLAGS="-g -DDEBUG -fPIC -Wall"
else
	DEBUG_FLAGS="-O"
fi

AC_ARG_ENABLE(oracle, [  --enable-oracle            enable oracle verion],
	[oracle_ok=$enableval])

if test "$oracle_ok" = "yes"; then
	ORA_ENABLE="-DORACLE_ENABLE"
	PROC="$ORACLE_HOME/bin/proc"
	PROCFLAGS=" code=cpp cpp_suffix=cpp"
	ORA_INC_DIR="-I$ORACLE_HOME/precomp/public -I$TOP_DIR/include/ora"

	if test -d "$ORACLE_HOME/lib32"
	then
		ORA_LIB_DIR="-L$ORACLE_HOME/lib32"
	else
		ORA_LIB_DIR="-L$ORACLE_HOME/lib"
	fi

	if test "$SYS" = "HP-UX"; then
		if test -d "$ORACLE_HOME/lib32"
		then
			ORA_LIBS=' -lclntsh -lscora'
		else
			ORA_LIBS=' -lclntsh -lscora'
		fi
	else 
		if test "$SYS" = "SunOS"; then
			ORA_LIBS='$(PROLDLIBS) -lscora'
		else
			if test -d "$ORACLE_HOME/lib32"; then
				ORA_LIBS='-lclntsh -lm `cat $(ORACLE_HOME)/lib32/sysliblist` -lm -lscora'
			else
				ORA_LIBS='-lclntsh -lm `cat $(ORACLE_HOME)/lib/sysliblist` -lm -lscora'
			fi
		fi
	fi

	OBJS=' $(COBJS) $(ORA_OBJS) $(PROXY_OBJS)'
else
	ORA_ENABLE=""
	PROC=""
	PROCFLAGS=""
	ORA_INC_DIR=""
	ORA_LIB_DIR=""
	ORA_LIBS=""
	OBJS=' $(COBJS) $(PROXY_OBJS)'
fi

AC_SUBST(DEBUG_FLAGS)
AC_SUBST(ORA_ENABLE)
AC_SUBST(PROC)
AC_SUBST(PROCFLAGS)
AC_SUBST(ORA_INC_DIR)
AC_SUBST(ORA_LIB_DIR)
AC_SUBST(ORA_LIBS)
AC_SUBST(OBJS)

AC_OUTPUT(MakeVars)
